# ruru

./: .gitignore  CMakeLists.txt  LICENSE  README.md  commands.repl  conanfile.py  database.md
documentation/: database.md
example/: example2.cpp  main.cpp  pch.h
include/: ruru.h
repl/: Console.cpp  Console.hpp  main.cpp
src/: StoreFactoryRegistry.cpp  btreeindex.h  database.cpp  database.h  field_impl.hpp  flusher.h  main.cpp  pch.h  record.cpp  record.h  resultset.cpp  resultset.h  ruru.h  storage_engine.h  storageengine.cpp  table.cpp  table.h
src/internal/: RecordStream.h  basic_storage_engine.cpp  basic_storage_engine.h  basic_storage_with_cache.cpp  basic_storage_with_cache.h  basic_store_cache.cpp  basic_store_cache.h  basice_storage_engine.cpp  btreeindex.h  tools.cpp  tools.h
src/utils/: binary_stream.h  circular_buffer.h
test/db1/: Employee.ru  Employee.ru.index  Employee.ru.row.index  db1.json  db1.ru
tests/: CMakeLists.txt
tests/api-test/: CMakeLists.txt  dbTests.cpp  tableTests.cpp
tests/testCache/: CMakeLists.txt  main.cpp
